--- a/less/home-page.less
+++ b/less/home-page.less
@@ -178,4 +178,25 @@
       }
     }
   }
+
+  .resume{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    @media @phone {
+      flex-direction: column;
+    }
+    h1 {
+      width: 80%;
+      text-align: left;
+      font-size: 6rem;
+      font-weight: bold;
+      margin-bottom: 2%;
+      font-family: "Quicksand", sans-serif;
+      margin-left: 5%;
+      margin-top: 2%;
+    }
+  }
 }
