--- a/less/navigation.less
+++ b/less/navigation.less
@@ -19,7 +19,7 @@
   background: linear-gradient(to bottom,#cc5500, #ff791a);
   display: flex; 
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between; 
   align-items: center;
   
   @media @tablet {
@@ -31,28 +31,26 @@
   }
   p {
     max-width: 50%;
-    margin-bottom: 1%;
+    padding-bottom: 5%;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 2.9rem;
     
   }
-  img {
-    width: 200px;
-    height: 200px;
-    object-fit: scale;
-    flex-shrink: 2;
-    border-radius: 50%;
-    margin-bottom: 3%;
-  }
+  // img {
+  //   width: 200px;
+  //   height: 200px;
+  //   object-fit: scale;
+  //   flex-shrink: 2;
+  //   border-radius: 50%;
+  //   margin-bottom: 3%;
+  // }
 
   h1 {
     font-family: 'Chivo', sans-serif;
-    
-    
-
     font-style: italic;
     font-size: 6rem;
     margin-bottom: 1%;
+    margin-top: 10%;
     @media @tablet {
       width: 65%;
       text-align: center;
@@ -83,17 +81,18 @@
     }
 
 }
-  nav {
+  .navigation {
     width: 60%;
     height: 5%;
     display: flex;
-    justify-content: center;
+    // justify-self: flex-end;
     margin-bottom: 1%;
+    margin-top: 5%;
     @media @tablet {
-      margin-bottom: 3%;
-      padding: 0;
-      margin: 0;
-      width: 100%;
+      // margin-bottom: 3%;
+      // padding: 0;
+      // margin: 0;
+      // width: 100%;
     }
 
     a {
@@ -109,12 +108,13 @@
       text-decoration: none;
       transition-duration: 300ms;
       @media @tablet {
-        width: 10%;
-        font-size: 1.5rem;
+        // width: 10%;
+        // font-size: 1.5rem;
+        margin: 0 10%;
       }
       &:hover {
         // color: @complementary; 
-        border: 1px solid white;
+        border: 1px solid @complementary;
         background: @complementary;
       }
     }
