--- a/less/home-page.less
+++ b/less/home-page.less
@@ -70,7 +70,11 @@
         height: 400px;
         object-fit: scale;
         flex-shrink: 2;
-        box-shadow: -2px -3px 5px rgba(0, 0, 0, 1);
+      }
+      .mood-bloom-img {
+        width: auto;
+        height: 400px;
+        box-shadow: none;
       }
     }
 
