--- a/less/home-page.less
+++ b/less/home-page.less
@@ -76,6 +76,11 @@
         height: 400px;
         box-shadow: none;
       }
+      .seventh-link {
+        text-decoration: none;
+        color: black;
+        font-weight: 550;
+      }
     }
 
     .arrow {
