--- a/less/footer.less
+++ b/less/footer.less
@@ -1,12 +1,14 @@
 // Footer Styles
 footer { 
-  color: #22283B;
-  background: @nav-bg;
+  color: darkslategray;
+  background: #F0F2F5;
   padding: 20px 0;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  bottom: 0; 
-  
+  bottom: 0;
+  .footer-text {
+    font-size: 1.3rem;
+  }
 }
