--- a/css/index.css
+++ b/css/index.css
@@ -553,56 +553,49 @@ footer .footer-text {
   color: white;
   margin-bottom: 2%;
 }
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-input[type="text"],
-select,
-textarea {
-  width: 70%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-label {
-  font-size: 2rem;
-  align-self: center;
-}
-input[type="submit"] {
-  width: 15%;
-  background-color: orange;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-input[type="submit"]:hover {
-  background-color: darkorange;
-}
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-.container .contact-top {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.container .contact-top h1 {
-  font-size: 4rem;
-}
-.container .contact-top h3 {
-  margin: 1% 0;
-  padding: 1% 0;
-  border-top: 2px dashed #8D7E83;
+.form-div {
   width: 100%;
-  text-align: center;
+  margin: 0 auto;
+  padding-top: 60px;
+}
+.form-div .form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.form-div .form .input-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.form-div .form .input-div .input-title {
+  font-family: "Quicksand", sans-serif;
+  font-weight: bold;
+}
+.form-div .form .input-div .input {
+  margin: 10px 0;
+  width: 50%;
+  height: 30px;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+}
+.form-div .form .input-div .textarea {
+  height: 80px;
+}
+.form-div .form .form-button {
+  border: none;
+  border-radius: 20px;
+  padding: 15px;
+  width: 120px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  background: #0077CC;
+  color: white;
+}
+.form-div .form .form-button:hover {
+  background: #F0F2F5;
+  color: black;
 }
