--- a/less/contact.less
+++ b/less/contact.less
@@ -1,7 +1,9 @@
 .form-div {
-  width: 100%;
+  width: 70%;
   margin: 0 auto;
-  padding-top: 60px;
+  padding: 30px;
+  border-radius: 20px;
+  background-color: #DFE0DF;
   .form {
     width: 100%;
     display: flex;
@@ -14,10 +16,11 @@
       .input-title {
         font-family: "Quicksand", sans-serif;
         font-weight: bold;
+        font-size: 25px;
       }
       .input {
         margin: 10px 0;
-        width: 50%;
+        width: 60%;
         height: 30px;
         padding: 5px;
         border: none;
