--- a/less/home-page.less
+++ b/less/home-page.less
@@ -166,7 +166,7 @@
     .projects-button {
       margin: 2% 0;
       width: 20%;
-      border: 2px solid white;
+      border: 2px solid rgb(246, 248, 246);
       border-radius: 10px;
       font-size: 3rem;
       text-align: center;
@@ -178,7 +178,7 @@
       padding: 10px;
       background: none;
       font-family: "Source Sans Pro", sans-serif;
-      color: white;
+      color: rgb(246, 248, 246);
  
       @media @tablet {
         width: 10%;
