--- a/less/footer.less
+++ b/less/footer.less
@@ -4,11 +4,21 @@ footer {
   background: #F0F2F5;
   padding: 20px 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
   bottom: 0;
+  text-decoration: none;
   .footer-text {
-    font-size: 1.3rem;
+    font-size: 1.7rem;
+    text-decoration: none;
+    color: darkslategray;
+    margin-bottom: 5px;
+  }
+  .footer-citation {
+    font-size: 1.2rem;
+    text-decoration: none;
+    color: darkslategray;
   }
 }
