--- a/less/navigation.less
+++ b/less/navigation.less
@@ -98,7 +98,7 @@
     a {
       margin: 0 2%;
       width: 20%;
-      border: 1px solid white;
+      border: 1px solid rgb(246, 248, 246);
       border-radius: 10px;
       font-size: 2rem;
       text-align: center;
@@ -121,7 +121,7 @@
     .nav-test,
     .nav-home,
     .nav-about {
-      color: white;
+      color: rgb(246, 248, 246);
     }
   }
 }
