WIP: contact form

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -29,23 +29,15 @@
     align-content: center;
     padding-top: 3%;
   }
-  p {
+  .nav-text {
     max-width: 50%;
     padding-bottom: 5%;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 2.9rem;
-    
+    text-align: center;
   }
-  // img {
-  //   width: 200px;
-  //   height: 200px;
-  //   object-fit: scale;
-  //   flex-shrink: 2;
-  //   border-radius: 50%;
-  //   margin-bottom: 3%;
-  // }
 
-  h1 {
+  .nav-title {
     font-family: 'Chivo', sans-serif;
     font-style: italic;
     font-size: 6rem;
