--- a/css/index.css
+++ b/css/index.css
@@ -198,13 +198,14 @@ p {
     padding-top: 3%;
   }
 }
-.nav p {
+.nav .nav-text {
   max-width: 50%;
   padding-bottom: 5%;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 2.9rem;
+  text-align: center;
 }
-.nav h1 {
+.nav .nav-title {
   font-family: 'Chivo', sans-serif;
   font-style: italic;
   font-size: 6rem;
@@ -212,7 +213,7 @@ p {
   margin-top: 10%;
 }
 @media (max-width: 800px) {
-  .nav h1 {
+  .nav .nav-title {
     width: 65%;
     text-align: center;
     margin-bottom: 2%;
