--- a/less/navigation.less
+++ b/less/navigation.less
@@ -40,9 +40,19 @@
   .nav-title {
     font-family: 'Chivo', sans-serif;
     font-style: italic;
-    font-size: 6rem;
-    margin-bottom: 1%;
+    font-size: 8rem;
     margin-top: 10%;
+    @media @tablet {
+      width: 65%;
+      text-align: center;
+      margin-bottom: 2%;
+    }
+  }
+  .nav-second-title {
+    font-family: 'Chivo', sans-serif;
+    font-style: italic;
+    font-size: 3rem;
+    margin-bottom: 1%;
     @media @tablet {
       width: 65%;
       text-align: center;
@@ -79,7 +89,7 @@
     display: flex;
     // justify-self: flex-end;
     margin-bottom: 1%;
-    margin-top: 5%;
+    margin-top: 2%;
     @media @tablet {
       // margin-bottom: 3%;
       // padding: 0;
