--- a/less/navigation.less
+++ b/less/navigation.less
@@ -35,6 +35,10 @@
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 2.9rem;
     text-align: center;
+    @media @phone {
+      font-size: 2rem;
+      margin-top: 10%
+    }
   }
 
   .nav-title {
@@ -42,10 +46,9 @@
     font-style: italic;
     font-size: 8rem;
     margin-top: 10%;
-    @media @tablet {
-      width: 65%;
-      text-align: center;
-      margin-bottom: 2%;
+    @media @phone {
+      font-size: 4rem;
+      margin-top: 10%
     }
   }
   .nav-second-title {
