--- a/less/navigation.less
+++ b/less/navigation.less
@@ -22,11 +22,12 @@
   justify-content: space-between; 
   align-items: center;
   
-  @media @tablet {
+  @media @phone {
     width: 100%;
     margin: 0 auto;
     flex-direction: column;
-    align-content: center;
+    justify-content: flex-start;
+    align-items: center;
     padding-top: 3%;
   }
   .nav-text {
@@ -36,8 +37,10 @@
     font-size: 2.9rem;
     text-align: center;
     @media @phone {
-      font-size: 2rem;
-      margin-top: 10%
+      font-size: 2.4rem;
+      margin-top: 15%;
+      margin-bottom: 15%;
+      max-width: 90%;
     }
   }
 
@@ -48,7 +51,9 @@
     margin-top: 10%;
     @media @phone {
       font-size: 4rem;
-      margin-top: 10%
+      width: 100%;
+      text-align: center;
+     
     }
   }
   .nav-second-title {
@@ -57,9 +62,10 @@
     font-size: 3rem;
     margin-bottom: 1%;
     @media @tablet {
-      width: 65%;
+      width: 85%;
       text-align: center;
       margin-bottom: 2%;
+      font-size: 2rem;
     }
   }
   .arrow{
@@ -93,11 +99,8 @@
     // justify-self: flex-end;
     margin-bottom: 1%;
     margin-top: 2%;
-    @media @tablet {
-      // margin-bottom: 3%;
-      // padding: 0;
-      // margin: 0;
-      // width: 100%;
+    @media @phone {
+      display: none;
     }
 
     a {
