--- a/less/home-page.less
+++ b/less/home-page.less
@@ -28,15 +28,24 @@
     @media @phone {
       flex-direction: column;
     }
-    h1 {
+    .projects-title {
       width: 80%;
       text-align: left;
       font-size: 6rem;
       font-weight: bold;
-      margin-bottom: 2%;
+      padding-bottom: 5%;
       font-family: "Quicksand", sans-serif;
       margin-left: 5%;
       margin-top: 2%;
+      @media @phone {
+        width: 100%;
+        text-align: left;
+        font-size: 4rem;
+        padding-left: 5%;
+        font-weight: bold;
+        margin-bottom: 2%;
+        font-family: "Quicksand", sans-serif;
+      }
     }
     div {
       display: flex;
@@ -53,10 +62,26 @@
         align-items: center;
         width: 100%;
         margin: 0 auto;
-        border: 1px dashed @nav-bg;
       }
-      h1 {
+      .project-title {
+        width: 80%;
+        text-align: left;
         font-size: 3rem;
+        font-weight: bold;
+        margin-bottom: 2%;
+        font-family: "Quicksand", sans-serif;
+        margin-left: 5%;
+        margin-top: 2%;
+        @media @phone {
+          width: 100%;
+          text-align: center;
+          font-size: 3rem;
+          font-weight: bold;
+          margin-bottom: 2%;
+          font-family: "Quicksand", sans-serif;
+          margin-left: 5%;
+          margin-top: 2%;
+        }
       }
 
       p {
@@ -64,6 +89,12 @@
         padding-top: 0;
         width: 80%;
         font-size: 2rem;
+        @media @phone {
+          padding: 0 5%;
+          padding-top: 0;
+          width: 90%;
+          font-size: 1.8rem;
+        }
       }
       img {
         width: 600px;
@@ -71,8 +102,8 @@
         object-fit: scale;
         flex-shrink: 2;
         @media @phone {
-          width: 300px;
-          height: 200px;
+          width: 350px;
+          height: 250px;
         }
       }
       .mood-bloom-img {
@@ -165,9 +196,13 @@
       }
     }
 
-    .project1, .project2, .project3, .project4 {
+    .project1,
+    .project2,
+    .project3,
+    .project4 {
       display: flex;
-        
+      margin: 0;
+      padding-bottom: 10%;
     }
 
     .projects-button {
@@ -186,10 +221,19 @@
       background: none;
       font-family: "Source Sans Pro", sans-serif;
       color: rgb(246, 248, 246);
- 
-      @media @tablet {
-        width: 10%;
-        font-size: 1.5rem;
+
+      @media @phone {
+        margin: 2% 0;
+        width: 40%;
+        border: 2px solid rgb(246, 248, 246);
+        border-radius: 10px;
+        font-size: 3rem;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        padding: 10px;
       }
       &:hover {
         // color: @complementary;
@@ -199,7 +243,7 @@
     }
   }
 
-  .contact{
+  .contact {
     width: 100%;
     margin: 0 auto;
     display: flex;
