--- a/less/contact.less
+++ b/less/contact.less
@@ -79,8 +79,8 @@
         background: @complementary;
         color: white;
         &:hover {
-          background: #f0f2f5;
-          color: black;
+          background: rgb(69, 163, 230);
+  
           @media @phone {
             background: @complementary;
             color: white;
